started on the header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link rel='stylesheet' href='style.css'/>
   </head>
   <body>
-    <img src='IMG_6885.JPG' height="300"; width="300">
+  <div class="header">
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Social Events</a>
+    <div class="centerofhead">
+      <img src="/Users/CQ/documents/systemic-Formulas/img/Logo _ Branding/The Plan. Branding/mainlogo.jpeg" style="height: 250px;"/>
+      <span class="events">Events</span>
+      <span class="pde">Planning.Design.Education</span>
+    </div>
+      <a href="#">Corporate Events</a>
+      <a href="#">The Acadamy</a>
+      <a href="#">Blog</a>
+  </div>
   </body>
 </html>
