--- a/index.html
+++ b/index.html
@@ -6,18 +6,82 @@
     <link rel='stylesheet' href='style.css'/>
   </head>
   <body>
+<div class="backpic"><img src='/Users/CQ/documents/systemic-Formulas/img/Austin-Wedding-Photographers-007.jpg' style="height: 100%; width: 100%;">
   <div class="header">
+    <div class="elementcontainer">
       <a href="#">Home</a>
       <a href="#">About Us</a>
       <a href="#">Social Events</a>
-    <div class="centerofhead">
-      <img src="/Users/CQ/documents/systemic-Formulas/img/Logo _ Branding/The Plan. Branding/mainlogo.jpeg" style="height: 250px;"/>
-      <span class="events">Events</span>
-      <span class="pde">Planning.Design.Education</span>
-    </div>
       <a href="#">Corporate Events</a>
       <a href="#">The Acadamy</a>
       <a href="#">Blog</a>
+    </div>
+   </div>
+ <div class="logocontainer">
+  <div class="logo">
+    <img src="/Users/CQ/documents/systemic-Formulas/img/the plan logo.png" style="height: 300px; width: 100%;"/>
+    <span id="events">Events</span>
+    <span id="pde">Planning.Design.Education</span>
   </div>
+ </div>
+  <div class="box-to-box-container">
+   <div class="box-move"></div>
+   <div class="box-move"></div>
+   <div class="box-move"></div>
+   <div class="box-move"></div>
+   <div class="box-move"></div>
+   <div class="box-move"></div>
+  </div>
+       <div class="body-container-first">
+          <div class="left-contain">
+             <img src='/Users/CQ/documents/systemic-Formulas/img/IMG_6885.JPG' style="height: 700px; width: 100%;">
+          </div>
+        </div>
+          <div class="right-contain">
+          <div class='mission-statement'><h2>The Plan. Mission:</h2><div>
+The Plan.  Believes in serving clients honestly & fairly.
+Keeping in tune with the needs of the market, utilizing the latest technology and trends while ensuring the client receives the unique,
+individual attention they deserve.
+We strive to be at the forefront of event education and planning.
+         </div>
+      </div>
+            <div class="img-one">
+               <img src="/Users/CQ/documents/systemic-Formulas/img/IMG_6884.JPG" alt="" style="height: 450px; width: 300px;" />
+               <span class="w6-btn">
+                   <a href="#">Tiffany Denny</a></span>
+               </div>
+            <div class="img-two">
+              <img src="/Users/CQ/documents/systemic-Formulas/img/K & T and the Plan 0277.jpg" alt="" style="height: 450px; width: 300px;" />
+                <a href="#">Kirstan Something</a>
+           </div>
+       </div>
+    <div class="body-last">
+       <div class="acadamy">
+          <div><a href="#">The Acadamy</a></div>
+          <span class="linksin"><a href="#">Learn More</a> about the courses we offer.</span>
+       </div>
+       <div class="insta">
+         <div><a href="#">The plan on Instagram</a></div>
+         <span class="linksin"><a href="#">Connect</a> with us </span>
+      </div>
+      <div class="read-blog">
+        <div><a href="#">Read the Blog</a></div>
+        <span class="linksin"> What new at <a href="#">The Plan</a></span>
+     </div>
+   </div>
+   <div class="footer">
+     <div class="elementcontainer1">
+       <a href="#">Home</a>
+       <a href="#">About Us</a>
+       <a href="#">Social Events</a>
+       <a href="#">Corporate Events</a>
+       <a href="#">The Acadamy</a>
+       <a href="#">Blog</a>
+     </div>
+   </div>
+</div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type='text/javascript' src='app/script/scripts.js'></script>
   </body>
 </html>
