--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="/Users/CQ/documents/systemic-Formulas/img/the plan logo.png" style="height: 300px; width: 100%;"/>
     <span id="events">Events</span>
     <span id="pde">Planning.Design.Education</span>
-  </div>
+  </div>s
  </div>
   <div class="box-to-box-container">
    <div class="box-move"></div>
@@ -38,7 +38,10 @@
           </div>
         </div>
           <div class="right-contain">
-          <div class='mission-statement'><h2>The Plan. Mission:</h2><div>
+          <div class='mission-statement'>
+            <span class='The'> The </span> <span class='Plan'> Plan. </span>
+            <span class='Mission'> Mission: </span>
+            <div>
 The Plan.  Believes in serving clients honestly & fairly.
 Keeping in tune with the needs of the market, utilizing the latest technology and trends while ensuring the client receives the unique,
 individual attention they deserve.
@@ -60,13 +63,13 @@ We strive to be at the forefront of event education and planning.
           <div><a href="#">The Acadamy</a></div>
           <span class="linksin"><a href="#">Learn More</a> about the courses we offer.</span>
        </div>
-       <div class="insta">
-         <div><a href="#">The plan on Instagram</a></div>
-         <span class="linksin"><a href="#">Connect</a> with us </span>
+       <div class="social-media">
+         <div><a href="#">The plan. On Social Media</a></div>
+         <span class="linksin"><a href="#">Connect</a> with us. </span>
       </div>
       <div class="read-blog">
-        <div><a href="#">Read the Blog</a></div>
-        <span class="linksin"> What new at <a href="#">The Plan</a></span>
+        <div><a href="#">The Blog</a></div>
+        <span class="linksin">  <a href="#">Find out  </a> what's new </span>
      </div>
    </div>
    <div class="footer">
