--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <div class="wrapper"></div>
-<div class="backpic"><img src='/Users/CQ/documents/systemic-Formulas/img/Austin-Wedding-Photographers-007.jpg' style="height: 100%; width: 100%;">
+<div class="backpic"><img src="/Users/CQ/documents/systemic-Formulas/img/IMG_6885.JPG" style="width: 100%;
+height: 600px;"/>
      <div class="header">
         <div class="elementcontainer">
-          <img src="/Users/CQ/documents/systemic-Formulas/img/the plan logo.png" style="height: 100px; width: 80px;"/>
+          <img src="/Users/CQ/documents/systemic-Formulas/img/Logo _ Branding/The Plan. Branding/the plan logo.png" style="height: 100px; width: 80px;"/>
           <a href="#">Home</a>
           <a href="#">About Us</a>
           <a href="#">Social Events</a>
@@ -21,7 +22,7 @@
   </div>
 <div class="logocontainer">
   <div class="logo">
-    <img src="/Users/CQ/documents/systemic-Formulas/img/the plan logo.png" style="height: 300px; width: 100%;"/>
+    <img src="/Users/CQ/documents/systemic-Formulas/img/Logo _ Branding/The Plan. Branding/the plan logo.png" style="height: 300px; width: 100%;"/>
     <span id="events">Events</span>
     <span id="pde">Planning.Design.Education</span>
   </div>
