--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
   </head>
   <body>
     <div class="wrapper"></div>
-<div class="backpic"><img src="/Users/CQ/documents/systemic-Formulas/img/IMG_6885.JPG" style="width: 100%;
-height: 600px;"/>
+<div class="backpic"><img src="/Users/CQ/documents/systemic-Formulas/img/IMG_6885.JPG" style="width: 100%; height: 600px;"/>
      <div class="header">
         <div class="elementcontainer">
-          <img src="/Users/CQ/documents/systemic-Formulas/img/Logo _ Branding/The Plan. Branding/the plan logo.png" style="height: 100px; width: 80px;"/>
-          <a href="#">Home</a>
-          <a href="#">About Us</a>
-          <a href="#">Social Events</a>
-          <a href="#">Corporate Events</a>
-          <a href="#">The Acadamy</a>
-          <a href="#">Blog</a>
+          <div id="inf"><a href="#">Home</a></div>
+          <div id="inf"><a href="#">About Us</a></div>
+          <div id="inf"><a href="#">Social Events</a></div>
+          <div id="inf"><a href="#">Corporate Events</a></div>
+          <div id="inf"><a href="#">The Acadamy</a></div>
+          <div id="inf"><a href="#">Blog</a></div>
     </div>
   </div>
 <div class="logocontainer">
   <div class="logo">
-    <img src="/Users/CQ/documents/systemic-Formulas/img/Logo _ Branding/The Plan. Branding/the plan logo.png" style="height: 300px; width: 100%;"/>
+    <img src="/Users/CQ/documents/systemic-Formulas/the plan logo.png" style="height: 300px; width: 100%;"/>
     <span id="events">Events</span>
     <span id="pde">Planning.Design.Education</span>
   </div>
@@ -87,7 +85,7 @@ We strive to be at the forefront of event education and planning.
    </div>
 </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script type='text/javascript' src='app/script/scripts.js'></script>
   </body>
 </html>
