done with header

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>ThePlan</title>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link rel='stylesheet' href='style.css'/>
   </head>
   <body>
-    <div class="wrapper"></div>
-<div class="backpic"><img src="/Users/CQ/documents/systemic-Formulas/img/IMG_6885.JPG" style="width: 100%; height: 600px;"/>
+<div class="backpic"></div>
      <div class="header">
-        <div class="elementcontainer">
-          <div id="inf"><a href="#">Home</a></div>
-          <div id="inf"><a href="#">About Us</a></div>
-          <div id="inf"><a href="#">Social Events</a></div>
-          <div id="inf"><a href="#">Corporate Events</a></div>
-          <div id="inf"><a href="#">The Acadamy</a></div>
-          <div id="inf"><a href="#">Blog</a></div>
+      <div class="elementcontainer">
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Social Events</a>
+          <a href="#">Corporate Events</a>
+          <a href="#">The Acadamy</a>
+          <a href="#">Blog</a>
     </div>
   </div>
 <div class="logocontainer">
@@ -33,30 +34,25 @@
    <div class="box-move"></div>
    <div class="box-move"></div>
   </div>
-       <div class="body-container-first">
-          <div class="left-contain">
-             <img src='/Users/CQ/documents/systemic-Formulas/img/IMG_6885.JPG' style="height: 700px; width: 100%;">
-          </div>
-        </div>
-          <div class="right-contain">
+
+        <div class="right-contain">
           <div class='mission-statement'>
-            <span class='The'> The </span> <span class='Plan'> Plan. </span>
-            <span class='Mission'> Mission: </span>
-            <div>
+            
+            <span class='Mission'>  Our Mission: </span>
+            <p>
 The Plan.  Believes in serving clients honestly & fairly.
 Keeping in tune with the needs of the market, utilizing the latest technology and trends while ensuring the client receives the unique,
 individual attention they deserve.
 We strive to be at the forefront of event education and planning.
-         </div>
+         </p>
       </div>
-            <div class="img-one">
-               <img src="/Users/CQ/documents/systemic-Formulas/img/IMG_6884.JPG" alt="" style="height: 450px; width: 300px;" />
-               <span class="w6-btn">
-               <a href="#">Tiffany Denny</a></span>
+            <div class="img-1">
+               <img src="/Users/CQ/documents/systemic-Formulas/IMG_6884.JPG" alt="" style="height: 100%; width: 370px;" />
+               <a href="#"><button>Tiffany Denny</button></a>
             </div>
-        <div class="img-two">
-                <img src="/Users/CQ/documents/systemic-Formulas/img/K & T and the Plan 0277.jpg" alt="" style="height: 450px; width: 300px;" />
-                <a href="#">Kirstan Something</a>
+            <div class="img-two">
+                <img src="/Users/CQ/documents/systemic-Formulas/K & T and the Plan 0277.jpg" alt="" style="height: 100%; width: 370px;" />
+                <a href="#"><button>Kirstan Something</button></a>
            </div>
        </div>
     <div class="body-last">
@@ -85,7 +81,7 @@ We strive to be at the forefront of event education and planning.
    </div>
 </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type='text/javascript' src='app/script/scripts.js'></script>
   </body>
 </html>
