--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel='stylesheet' href='style.css'/>
   </head>
   <body>
-<div class="backpic"></div>
+
+  <div id="rotating-item-wrapper"><img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/IMG_6885.JPG", alt="photo of building across from our office" width="100%" height="600" />
+      <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/iStock_98911399_LARGE.jpg", alt="photo of building across from our office" width="100%" height="600" />
+      <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_374836303.jpg", alt="building entrance with neon backlit walls" width="100%" height="600" />
+      <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_387689899.jpg", alt="building lobby window reflections" width="100%" height="600" />
+      <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_127654469.jpg", alt="reflection on building windows" width="100%" height="600" />
+      <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_2064868.jpg", width="100%" height="600" />
+ </div>
      <div class="header">
       <div class="elementcontainer">
           <a href="#">Home</a>
@@ -37,7 +44,6 @@
 
         <div class="right-contain">
           <div class='mission-statement'>
-            
             <span class='Mission'>  Our Mission: </span>
             <p>
 The Plan.  Believes in serving clients honestly & fairly.
@@ -81,7 +87,6 @@ We strive to be at the forefront of event education and planning.
    </div>
 </div>
 
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script type='text/javascript' src='app/script/scripts.js'></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js?ver=3.0.1"></script><script type="text/javascript" src="app/js/infinite-rotator.js"></script>
   </body>
 </html>
