loops and loops

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_374836303.jpg", alt="building entrance with neon backlit walls" width="100%" height="600" />
       <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_387689899.jpg", alt="building lobby window reflections" width="100%" height="600" />
       <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_127654469.jpg", alt="reflection on building windows" width="100%" height="600" />
-      <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_2064868.jpg", width="100%" height="600" />
+      <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_100064018.jpg", width="100%" height="600" />
  </div>
      <div class="header">
       <div class="elementcontainer">
@@ -33,7 +33,7 @@
     <span id="pde">Planning.Design.Education</span>
   </div>
 </div>
-  <div class="box-to-box-container">
+  <div id="box-to-box-container">
    <div class="box-move"></div>
    <div class="box-move"></div>
    <div class="box-move"></div>
