loop almost done

--- a/index.html
+++ b/index.html
@@ -52,28 +52,29 @@ individual attention they deserve.
 We strive to be at the forefront of event education and planning.
          </p>
       </div>
-
+      <div class="cardcontainer">
+         <div class="tiffsCard">
+           <span class="divbox1"><div></div></span>
+           <span class="divbox2"><div></div></span>
+           <span class="divbox3"><div></div></span>
+         </div>
+          <div class="cardcontent">Tiffany Denny, C.M.P.
+            <br/>
+            <span> The event expert.</span></div>
+             <br/>
+             <div class="cardinfo">co-founder . 801-675-9842
+             <br/>
+             www.theplanevent.com
+             <br/>
+             tiffanydenny@theplanevent.com
+             </div>
+        </div>
             <div class="img-1">
-               <img src="/Users/CQ/documents/systemic-Formulas/IMG_6884.JPG" alt="" style="height: 100%; width: 370px;" />
+               <img src="/Users/CQ/documents/systemic-Formulas/IMG_6884.JPG" alt="" style="height: 100%; width: 100%;" />
                <a href="#"><button>Tiffany Denny</button></a>
-               <div class="cardcontainer">
-                  <div class="tiffsCard">
-                    <span class="divbox1"><div></div></span>
-                    <span class="divbox2"><div></div></span>
-                    <span class="divbox3"><div></div></span>
-                  </div>
-                   <div class="cardcontent">Tiffany Denny, C.M.P.<div> The event expert.</div></div>
-                      <br/>
-                      <div class="cardinfo">co-founder . 801-675-9842
-                      <br/>
-                      www.theplanevent.com
-                      <br/>
-                      tiffanydenny@theplanevent.com
-                      </div>
-                 </div>
                </div>
             <div class="img-two">
-                <img src="/Users/CQ/documents/systemic-Formulas/K & T and the Plan 0277.jpg" alt="" style="height: 100%; width: 370px;" />
+                <img src="/Users/CQ/documents/systemic-Formulas/K & T and the Plan 0277.jpg" alt="" style="height: 100%; width: 100%;" />
                 <a href="#"><button>Kirstan Something</button></a>
            </div>
        </div>
