info cards done

--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@ We strive to be at the forefront of event education and planning.
             <div class="img-two">
                 <img src="/Users/CQ/documents/systemic-Formulas/K & T and the Plan 0277.jpg" alt="" style="height: 100%; width: 100%;" />
                 <a href=""><button>Kirstan Something</button></a>
+                <div id="cardcontainer">
+                   <div class="tiffsCard">
+                     <span class="divbox1"><div></div></span>
+                     <span class="divbox2"><div></div></span>
+                     <span class="divbox3"><div></div></span>
+                   </div>
+                    <div class="cardcontent">Tiffany Denny, C.M.P.
+                      <br/>
+                      <span> The event expert.</span></div>
+                       <br/>
+                       <div class="cardinfo">co-founder . 801-675-9842
+                       <br/>
+                       www.theplanevent.com
+                       <br/>
+                       tiffanydenny@theplanevent.com
+                       </div>
+                  </div>
            </div>
        </div>
     <div class="body-last">
