--- a/index.html
+++ b/index.html
@@ -63,34 +63,34 @@ We strive to be at the forefront of event education and planning.
                   </div>
                    <div class="cardcontent">Tiffany Denny, C.M.P.
                      <br/>
-                     <span> The event expert.</span></div>
+                     <span style="font-size: 0.5em;"> The event expert.</span></div>
                       <br/>
-                      <div class="cardinfo">co-founder . 801-675-9842
+                      <div class="cardinfo"><span style="color: #7dc6b6; text-align: left; display: inline">co-founder</span> . 801-675-9842
                       <br/>
                       www.theplanevent.com
                       <br/>
-                      tiffanydenny@theplanevent.com
+                      Tiffanydenny@theplanevent.com
                       </div>
                  </div>
                </div>
             <div class="img-two">
                 <img src="/Users/CQ/documents/systemic-Formulas/K & T and the Plan 0277.jpg" alt="" style="height: 100%; width: 100%;" />
-                <a href=""><button>Kirstan Something</button></a>
+                <a href=""><button>Kierstyn Franklin</button></a>
                 <div id="cardcontainer">
                    <div class="tiffsCard">
                      <span class="divbox1"><div></div></span>
                      <span class="divbox2"><div></div></span>
                      <span class="divbox3"><div></div></span>
                    </div>
-                    <div class="cardcontent">Tiffany Denny, C.M.P.
+                    <div class="cardcontent">Kierstyn Franklin, C.M.P.
                       <br/>
-                      <span> The event expert.</span></div>
+                         <span style="font-size: 0.5em;"> The event expert.</span></div>
                        <br/>
-                       <div class="cardinfo">co-founder . 801-675-9842
+                       <div class="cardinfo"><span style="color: #7dc6b6; text-align: left; display: inline">co-founder</span> . 801-668-6600
                        <br/>
                        www.theplanevent.com
                        <br/>
-                       tiffanydenny@theplanevent.com
+                       Kierstynfranklin@theplanevent.com
                        </div>
                   </div>
            </div>
