changing things around the page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_100064018.jpg", width="100%" height="600" />
  </div>
      <div class="header">
-      <div class="elementcontainer">
+   <div class="elementcontainer">
           <a href="#">Home</a>
           <a href="#">About Us</a>
           <a href="#">Social Events</a>
@@ -25,11 +25,13 @@
           <a href="#">The Acadamy</a>
           <a href="#">Blog</a>
     </div>
+    <img src="/Users/CQ/documents/systemic-Formulas/img array/instagram.png" alt="" height="35px" width="35px;"/>
+    <img src="/Users/CQ/documents/systemic-Formulas/img array/twitter.png" alt="" height="35px" width="35px"/>
   </div>
 <div class="logocontainer">
   <div class="logo">
-    <img src="/Users/CQ/documents/systemic-Formulas/the plan logo.png" style="height: 300px; width: 100%;"/>
-    <span id="events">Events</span>
+    <img src="/Users/CQ/documents/systemic-Formulas/the plan logo.png" style="height: 400px; width: 80%;"/>
+
     <span id="pde">Planning.Design.Education</span>
   </div>
 </div>
@@ -75,14 +77,14 @@ We strive to be at the forefront of event education and planning.
                </div>
             <div class="img-two">
                 <img src="/Users/CQ/documents/systemic-Formulas/K & T and the Plan 0277.jpg" alt="" style="height: 100%; width: 100%;" />
-                <a href=""><button>Kierstyn Franklin</button></a>
+
                 <div id="cardcontainer">
                    <div class="tiffsCard">
                      <span class="divbox1"><div></div></span>
                      <span class="divbox2"><div></div></span>
                      <span class="divbox3"><div></div></span>
                    </div>
-                    <div class="cardcontent">Kierstyn Franklin, C.M.P.
+                    <div class="cardcontent">Kierstyn Franklin.
                       <br/>
                          <span style="font-size: 0.5em;"> The event expert.</span></div>
                        <br/>
