added social media png

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
           <a href="#">The Acadamy</a>
           <a href="#">Blog</a>
     </div>
-    <img src="/Users/CQ/documents/systemic-Formulas/img array/instagram.png" alt="" height="35px" width="35px;"/>
-    <img src="/Users/CQ/documents/systemic-Formulas/img array/twitter.png" alt="" height="35px" width="35px"/>
+     <img src="/Users/CQ/documents/systemic-Formulas/img array/twitter.png" alt="" height="40px" width="40px" />
+    <img src="/Users/CQ/documents/systemic-Formulas/img array/instagram.png" alt="" height="40px" width="40px" />
+    <img src="/Users/CQ/documents/systemic-Formulas/img array/facebook.png" alt="" height="40px" width="40px" />
+    <img src="/Users/CQ/documents/systemic-Formulas/img array/gmail.png" alt="" height="40px" width="40px" />
+    <img src="/Users/CQ/documents/systemic-Formulas/img array/pinterest.png" alt="" height="40px" width="40px" />
   </div>
 <div class="logocontainer">
   <div class="logo">
@@ -57,6 +60,8 @@ We strive to be at the forefront of event education and planning.
             <div class="img-1">
                <img src="/Users/CQ/documents/systemic-Formulas/IMG_6884.JPG" alt="" style="height: 100%; width: 100%;" />
                <a href=""><button>Tiffany Denny</button></a>
+
+            <!--   "bussiness card for tiffsCard"
                <div id="cardcontainer">
                   <div class="tiffsCard">
                     <span class="divbox1"><div></div></span>
@@ -74,10 +79,14 @@ We strive to be at the forefront of event education and planning.
                       Tiffanydenny@theplanevent.com
                       </div>
                  </div>
+
+                 !-->
                </div>
             <div class="img-two">
                 <img src="/Users/CQ/documents/systemic-Formulas/K & T and the Plan 0277.jpg" alt="" style="height: 100%; width: 100%;" />
+                <a href=""><button>Kierstyn Franklin</button></a>
 
+           <!--   "bussiness card for tiffsCard"
                 <div id="cardcontainer">
                    <div class="tiffsCard">
                      <span class="divbox1"><div></div></span>
@@ -95,6 +104,8 @@ We strive to be at the forefront of event education and planning.
                        Kierstynfranklin@theplanevent.com
                        </div>
                   </div>
+
+                           !-->
            </div>
        </div>
     <div class="body-last">
