--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
       <img class="rotating-item" src="/Users/CQ/documents/systemic-Formulas/img array/shutterstock_100064018.jpg", width="100%" height="600" />
  </div>
      <div class="header">
-   <div class="elementcontainer">
+        <div class="elementcontainer">
           <a href="#">Home</a>
           <a href="#">About Us</a>
           <a href="#">Social Events</a>
           <a href="#">Corporate Events</a>
           <a href="#">The Acadamy</a>
           <a href="#">Blog</a>
-    </div>
-     <img src="/Users/CQ/documents/systemic-Formulas/img array/twitter.png" alt="" height="40px" width="40px" />
-    <img src="/Users/CQ/documents/systemic-Formulas/img array/instagram.png" alt="" height="40px" width="40px" />
-    <img src="/Users/CQ/documents/systemic-Formulas/img array/facebook.png" alt="" height="40px" width="40px" />
-    <img src="/Users/CQ/documents/systemic-Formulas/img array/gmail.png" alt="" height="40px" width="40px" />
-    <img src="/Users/CQ/documents/systemic-Formulas/img array/pinterest.png" alt="" height="40px" width="40px" />
-  </div>
+        </div>
+      </div>
+      <div class="socialIcons">
+        <img src="/Users/CQ/documents/systemic-Formulas/img array/twitter.png" alt="" height="40px" width="40px" />
+        <img src="/Users/CQ/documents/systemic-Formulas/img array/instagram.jpg" alt="" height="28px" width="28px" />
+        <img src="/Users/CQ/documents/systemic-Formulas/img array/facebook.png" alt="" height="40px" width="40px" />
+        <img src="/Users/CQ/documents/systemic-Formulas/img array/gmail.png" alt="" height="40px" width="40px" />
+        <img src="/Users/CQ/documents/systemic-Formulas/img array/pinterest.png" alt="" height="40px" width="40px" />
+      </div>
 <div class="logocontainer">
   <div class="logo">
     <img src="/Users/CQ/documents/systemic-Formulas/the plan logo.png" style="height: 400px; width: 80%;"/>
